step: 005-02 Update World Generator Service